--- a/style.css
+++ b/style.css
@@ -37,7 +37,11 @@ table,th,td{
     padding: 10px;
 }
 table{
-    width: 60vw;
+    width: 60vw;  
+}
+#table{
+    position: fixed;
+    z-index: 50;
 }
 thead{
     color: white;
@@ -80,4 +84,20 @@ h3{
     position: fixed;
     background-repeat: no-repeat;
     background-size: contain;
+    z-index: 88;
+}
+
+#cover{
+
+    height: 1080px;
+    width: 1900px;
+    position: fixed;
+    top: 0;
+    right: 0px;
+    z-index: 33;
+}
+
+h1,h3{
+    position: relative;
+    z-index: 40;
 }
