--- a/style.css
+++ b/style.css
@@ -97,7 +97,12 @@ h3{
     z-index: 33;
 }
 
-h1,h3,footer{
+h1,h3{
     position: relative;
     z-index: 40;
+}
+.footer{
+    position: fixed;
+    bottom: 0;
+    z-index: 99;
 }
